--- a/OS2020/README
+++ b/OS2020/README
@@ -1,4 +1,61 @@
 Operating Systems 001
+
+Lab 2 Work Log
+
+	We added the printString function to kernel.c
+
+		Given parameter c (char*),  the function calls interrupt 0d22 
+		(0x16) to read a character from the keyboard, which gets saved to 
+		the next position in c and is also printed on the screen using 
+		interrupt 0d16 (0x10)
+
+		If the backspace character is pressed, it gets printed on the screen,
+		moving the cursor back, and decrements the index if it is not 
+		already set to 0
+
+		If the enter key is pressed, the input ends and a null character is 
+		appended to the current index to form a string
+
+		The backspace and enter keys are not added to the string
+
+	We added the mod and div functions to kernel.c to act in place of 
+	the / and % operations, which are not supported in bcc.
+
+	We added the writeInt function to kernel.c
+
+		Given parameter x (int), the mod and div functions are used to 
+		extract each digit of x and add it to a string, which gets printed
+		to the screen using the printString function called through 
+		interrupt 0d33 (0x21)
+
+		If x equals 0, "0" gets printed to the screen directly as the 
+		routine used for other numbers does not work for it
+
+	We added the readInt function to kernel.c
+
+		Given parameter n (int*), *n is set to 0 by default and the 
+		readString function is called on a variable c (char*)
+
+		For each character in c before the null character, *n is multiplied
+		by 10 to shift each digit to the left, after which the character 
+		is converted into a digit and added to *n
+
+	We mapped the readString, writeInt, and readInt functions to calls of
+	interrupt 0d33 (0x21) corresponding to the values 1, 13, and 14 stored
+	in AX respectively
+
+		The interrupt call for writeInt now takes a parameter for cx that 
+		determines whether the output goes to the screen or the printer,
+		just like with printString
+
+		All calls of readString, writeInt, and readInt have been replaced
+		with interrupt calls
+
+	We downloaded the file madLibKernel.c and replaced the contents of
+	the main function of kernel.c with it to test the functions we added. 
+	The mad lib program run when the kernel is started
+
+
 Lab 1 Work Log
 
 	We downloaded the files kernel.c, kernel.asm, and bootload.asm, all 
